--- a/index.html
+++ b/index.html
@@ -1,10 +1,69 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Broadway Design</title>
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <title>Broadway Design</title>
+</head>
+
+<body>
+<!-- top menu -->
+  <div>
     <h1>Broadway Design</h1>
-  </body>
+    <div class="topmenu">
+      <ul>
+        <li>Home</li>
+        <li>Process</li>
+        <li>Work</li>
+        <li>Team</li>
+        <li>Contact</li>
+      </ul>
+    </div>
+  </div>
+
+<!-- main content -->
+
+  <div>
+    <h2>Our Process</h2>
+
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg" />
+    <h3>Identify</h3>
+    <p>We focus on the most important details.</p>
+
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg" />
+    <h3>Understand</h3>
+    <p>We study our projects inside and out.
+
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg" />
+    <h3>Execure</h3>
+    <p>We put everything we have into our work.
+
+    <h3>Designed in New York</h3>
+
+    <h3>Portfolio</h3>
+    <p>Coming Soon</p>
+
+    <h3>Team</h3>
+    <p>We're Hiring!</p>
+
+    <h3>Contact</h3>
+    <p>Phone: (555)-555-5555</p>
+    <p>E-mail: test@example.com</p>
+    <p>Twitter: @test</p>
+
+  </div>
+
+<!-- footer -->
+
+  <div class="footer">
+    <p>&copy;Broadway 2017
+    <ul>
+      <li>Home</li>
+      <li>Process</li>
+      <li>Work</li>
+      <li>Team</li>
+      <li>Contact</li>
+    </ul>
+  </div>
+  
+</body>
 </html>
