--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 
     <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg" />
     <h3>Understand</h3>
-    <p>We study our projects inside and out.
+    <p>We study our projects inside and out.</p>
 
     <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg" />
-    <h3>Execure</h3>
+    <h3>Execute</h3>
     <p>We put everything we have into our work.
 
     <h3>Designed in New York</h3>
@@ -64,6 +64,6 @@
       <li>Contact</li>
     </ul>
   </div>
-  
+
 </body>
 </html>
