--- a/index.html
+++ b/index.html
@@ -3,30 +3,27 @@
 <head>
   <meta charset="utf-8">
   <title>Broadway Design</title>
+  <link href="./resources/css/style.css" type="text/css" rel="stylesheet" />
 </head>
 
 <body>
 <!-- top menu -->
-  <div>
+  <div class="topmenu">
     <h1>Broadway Design</h1>
-    <div class="topmenu">
-      <ul>
-        <li>Home</li>
-        <li>Process</li>
-        <li>Work</li>
-        <li>Team</li>
-        <li>Contact</li>
-      </ul>
-    </div>
+    <p><a href="#">Home</a></p>
+    <p><a href="#process">Process</a></p>
+    <p><a href="#work">Work</a></p>
+    <p><a href="#team">Team</a></p>
+    <p><a href="#contact">Contact</a></p>
   </div>
 
 <!-- main content -->
 
   <div>
-    <h2>Our Process</h2>
+    <h2 id="process">Our Process</h2>
 
     <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg" />
-    <h3>Identify</h3>
+    <h3>Identity</h3>
     <p>We focus on the most important details.</p>
 
     <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg" />
@@ -37,15 +34,17 @@
     <h3>Execute</h3>
     <p>We put everything we have into our work.
 
-    <h3>Designed in New York</h3>
+    <div id="newyork">
+      <h3>Designed in New York</h3>
+    </div>
 
-    <h3>Portfolio</h3>
+    <h3 id="work">Portfolio</h3>
     <p>Coming Soon</p>
 
-    <h3>Team</h3>
+    <h3 id="team">Team</h3>
     <p>We're Hiring!</p>
 
-    <h3>Contact</h3>
+    <h3 id="contact">Contact</h3>
     <p>Phone: (555)-555-5555</p>
     <p>E-mail: test@example.com</p>
     <p>Twitter: @test</p>
@@ -55,14 +54,12 @@
 <!-- footer -->
 
   <div class="footer">
-    <p>&copy;Broadway 2017
-    <ul>
-      <li>Home</li>
-      <li>Process</li>
-      <li>Work</li>
-      <li>Team</li>
-      <li>Contact</li>
-    </ul>
+    <span>&copy;Broadway 2017</span>
+    <a href="#">Home</a>
+    <a href="#process">About</a>
+    <a href="#work">Work</a>
+    <a href="#team">Team</a>
+    <a href="#contact">Contact</a>
   </div>
 
 </body>
